# go_file/src/ginDOme/docs/swagger.yaml
@@ -1,17 +1,79 @@
-basePath: /base/path
-host: cwy.helloworld.com
+definitions:
+  models.User:
+    properties:
+      account:
+        description: Account 登录账号
+        type: string
+      password:
+        description: Password 登录密码
+        type: string
+      re_password:
+        description: RePassword 校验登录密码
+        type: string
+      state:
+        description: State 用户状态， -1 - 异常；0 - 锁定；1 - 正常；
+        type: integer
+      user_profile:
+        allOf:
+        - $ref: '#/definitions/models.UserProfile'
+        description: UserProfile 用户信息
+    required:
+    - account
+    - password
+    type: object
+  models.UserProfile:
+    properties:
+      address:
+        description: 地址
+        type: string
+      age:
+        description: 年龄
+        type: integer
+      email:
+        description: 邮箱
+        type: string
+      id_card:
+        description: 身份证号
+        type: string
+      name:
+        description: 账号名称
+        type: string
+      number:
+        description: 手机号
+        type: string
+      sex:
+        description: 性别
+        type: integer
+      user_id:
+        description: User关联外键
+        type: integer
+    type: object
+  pkg.ResCode:
+    enum:
+    - 1000
+    - 1001
+    - 1002
+    - 1003
+    - 1004
+    - 1005
+    - 1006
+    - 1007
+    - 1008
+    - 1009
+    type: integer
+    x-enum-varnames:
+    - CodeSuccess
+    - CodeInvalidParam
+    - CodeUserExist
+    - CodeUserNotExist
+    - CodeInvalidPassword
+    - CodeServerBusy
+    - CodeNeedLogin
+    - CodeInvalidToken
+    - CodeTokenCreation
+    - CodeWrongCredentials
 info:
-  contact:
-    email: support@swagger.io
-    name: cwy
-    url: http://www.swagger.io/support
-  description: chenwenyu test helloworld
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: helloworld
-  version: "1.0"
+  contact: {}
 paths:
   /login:
     post:
@@ -85,7 +147,15 @@ paths:
         type: integer
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pkg.ResCode'
       summary: 获取用户列表
       tags:
       - Users
